force-app/main/default/objects/Product_Style__c/Product_Style__c.object-meta.xml
<CustomObject>
    <description>Object contains all of the unique product styles.  Records are created / updated via apex with Product Object record inserts and updates.  Does not need to be maintained via integration. 
Object Type: IA
Integrated: N</description>
    <label>Product Style</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Product Style #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>