force-app/main/default/objects/Product_Style__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Used in apex to match to the category on the Product object. Updated via apex.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Used in apex to match to the category on the Product object. Updated via apex.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Workwear</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Accessories Apparel and Gear</fullName>
            </value>
            <value>
                <fullName>Outside Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>