force-app/main/default/objects/Product_Style__c/fields/IsDiscontinued__c.field-meta.xml
<CustomField>
    <fullName>IsDiscontinued__c</fullName>
    <description>This field is configured to flag Discontinued Products for use in the Program Printable Materials</description>
    <formula>CASE(Item_Status_Code__c,&quot;80&quot;,&quot;*&quot;,&quot;90&quot;,&quot;*&quot;,&quot; &quot;)</formula>
    <inlineHelpText>This field is configured to flag Discontinued Products for use in the Program Printable Materials</inlineHelpText>
    <label>IsDiscontinued</label>
    <type>Text</type>
</CustomField>