force-app/main/default/objects/Product_Style__c/fields/Item_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Status_Code__c</fullName>
    <description>Rollup for the related Product Item Status Code (populated with the lowest possible value)</description>
    <inlineHelpText>Rollup for the related Product Item Status Code (populated with the lowest possible value)</inlineHelpText>
    <label>Item Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>