force-app/main/default/objects/Product_Style__c/fields/Style_Number_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Style_Number_Unique_ID__c</fullName>
    <description>Used in apex to match to the style number unique id on the Product object.  Updated via apex.
Field Type: IA
Integrated: N</description>
    <externalId>true</externalId>
    <inlineHelpText>Used in apex to match to the style number unique id on the Product object. Updated via apex.</inlineHelpText>
    <label>Style Number Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>